# hyperedit

./: .env.example  .gitignore  conftest.py  pyproject.toml  pyrightconfig.json  reassemble_affected.py
.claude/: settings.json
.claude/hooks/: block-commit-on-main.sh  guard-package-lock.sh  guard-supabase-mcp.sh  scan-secrets.sh  snapshot-before-rewrite.sh  verify-push-refspec.sh  (+1 more)
docs/: SESSION_SUMMARY_2026-03-09.md
knowledge/: config.yaml
orchestrator/: autonomous_agent_demo.py  client.py  linear_config.py  security.py  video_config.py
scripts/: assemble_erp_tutorials.py  capture_erp_screenshots.py  cron_setup.sh  record_erp_screens.py  record_extra_screens.py  render_machine_videos.py  test_ffmpeg.sh  update_storyboards_hybrid.py  update_storyboards_terraflow.py  verify_tutorial_videos.py
services/: ad_specs.py  ads_builder.py  batch_processor.py  database_service.py  e2e_verifier.py  ffmpeg_service.py  ffmpeg_web_ops.py  fofal_assembler.py  image_intelligence.py  ken_burns.py  kie_client.py  landing_page_builder.py  notification_service.py  quality_assurance.py  scheduler_service.py  scroll_site_builder.py  skill_animation.py  skill_audio.py  skill_brand.py  skill_broll.py  skill_captions.py  skill_chapters.py  skill_color.py  skill_dead_air.py  skill_export.py  skill_gif.py  skill_kie_image.py  skill_kie_video.py  skill_script.py  skill_shortform.py  skill_style.py  skill_template.py  skill_thumbnail.py  skill_transitions.py  skill_voiceover.py  skill_youtube.py  test_batch_processor.py  test_database_service.py  test_ffmpeg_service.py  test_integration.py  (+23 more)
(+46 files in other folders)
